--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a class="apresentacao-links2" href="https://www.instagram.com/_vitoria_luques?igsh=MXY3c2MwZ2hkNGZpeA%3D%3D&utm_source=qr" target="_blank"><img src="./imagens/instagram.png" alt="Instagram">Instagram</a>
             </div>
         </section>
-                    <img id="imagem-principal" src="./imagens/imagem.png" alt="Vitoria Oliveira" title="Desenvolvedora Front-End">
+                    <img id="imagem-principal" src="imagens/imagem.png" alt="Vitoria Oliveira" title="Desenvolvedora Front-End">
     </main>
     <footer>
         Site desenvolvido por Vitoria Oliveira | Todos os direitos reservados - Copyright 2025</footer>
