--- a/sobre.html
+++ b/sobre.html
@@ -26,7 +26,7 @@
 <p class="conteudo-texto"> Além da minha dedicação na fábrica,<br> estou investindo no meu crescimento profissional.<br> Atualmente, faço um intensivo curso de programação web, com 440 horas de conteúdo, distribuído em 6 meses.<br> É um desafio conciliar o trabalho com o estudo de tecnologias como HTML, CSS e JavaScript,<br> mas estou determinada a fazer a transição para a área de desenvolvimento e construir meu futuro na tecnologia. </p>
 </div>
 </section>
-<img id="imagem-principal" src="./imagens/Imagem.png" alt="Vitoria Oliveira" Title=" Desenvolvedora Front-End">
+<img id="imagem-principal" src="imagens/Imagem.png" alt="Vitoria Oliveira" Title=" Desenvolvedora Front-End">
 
   </main>
 </body>
